@@ -1,3 +1,9 @@
+2002-11-01  Keisuke Nishida  <knishida@netlab.jp>
+
+	* parser.y (resolve_predefined_names): Call recursively.
+
+	* tree.h (YYLTYPE): Moved from parser.y.
+
 2002-10-30  Keisuke Nishida  <knishida@netlab.jp>
 
 	* inline.c (output_search): Move index to variable.
